<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SAKInputDataItemManager</class>
 <widget class="QWidget" name="SAKInputDataItemManager">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>733</width>
    <height>413</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>发送数据预设</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="1" column="0">
    <widget class="QLabel" name="infoLabel">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
   </item>
   <item row="1" column="1">
    <widget class="QPushButton" name="outportPushButton">
     <property name="text">
      <string>导出</string>
     </property>
    </widget>
   </item>
   <item row="1" column="2">
    <widget class="QPushButton" name="importPushButton">
     <property name="text">
      <string>导入</string>
     </property>
    </widget>
   </item>
   <item row="1" column="3">
    <widget class="QPushButton" name="deletePushButton">
     <property name="text">
      <string>删除</string>
     </property>
    </widget>
   </item>
   <item row="1" column="4">
    <widget class="QPushButton" name="addPushButton">
     <property name="text">
      <string>添加</string>
     </property>
    </widget>
   </item>
   <item row="0" column="0" colspan="5">
    <widget class="QListWidget" name="itemListWidget"/>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
